This a Report v1 Model Has A databas and add show
