# storage/api-docs/api-docs.json
@@ -220,6 +220,33 @@
             }
         },
         "/api/v1/marker": {
+            "get": {
+                "tags": [
+                    "Marker"
+                ],
+                "summary": "Get All Marker",
+                "description": "Returns One Marker",
+                "operationId": "getAllMarker",
+                "responses": {
+                    "200": {
+                        "description": "Successful operation",
+                        "content": {
+                            "application/json": {}
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    }
+                },
+                "security": [
+                    {
+                        "bearer": []
+                    }
+                ]
+            },
             "post": {
                 "tags": [
                     "Marker"
